modify page 'more'

--- a/test/fixtures/exps.yml
+++ b/test/fixtures/exps.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: exps
+#
+#  id         :integer          not null, primary key
+#  user_id1   :integer
+#  user_id2   :integer
+#  value      :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
