--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: comments
+#
+#  id         :integer          not null, primary key
+#  task_id    :integer
+#  user_id    :integer
+#  message    :text
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
