--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: tasks
+#
+#  id          :integer          not null, primary key
+#  user_id     :integer
+#  description :text
+#  cookie      :text
+#  deadline    :datetime
+#  slave_id    :integer
+#  status      :string(255)
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
