--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: users
+#
+#  id                :integer          not null, primary key
+#  name              :string(255)
+#  uid               :string(255)
+#  provider          :string(255)
+#  picture_url       :string(255)
+#  picture_large_url :string(255)
+#  email             :string(255)
+#  created_at        :datetime
+#  updated_at        :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
