trying to add hash insted task_id

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -3,6 +3,7 @@
 # Table name: tasks
 #
 #  id          :integer          not null, primary key
+#  token       :text
 #  user_id     :integer
 #  description :text
 #  cookie      :text
